base-installer (1.16) UNRELEASED; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Add G5 PowerMac7,3 tests based on /proc/cpuinfo provided by Shyamal
      Prasad.

 -- Colin Watson <cjwatson@debian.org>  Mon, 17 Jan 2005 14:33:33 +0000

base-installer (1.15) experimental; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Colin Watson
    - Recognise POWER4+ and PPC970FX cpuinfo entries as power4 systems.
    - Only look at the first cpu line in cpuinfo on powerpc.
    - Add chrp_rs6k tests based on /proc/cpuinfo provided by Cajus
      Pollmeier.
    - Use backslash-continuations in tests to simplify future diffs.
    - Include "kernel-image-" stem in tests, to help with derivative
      distributions like Ubuntu that use a different stem.

 -- Colin Watson <cjwatson@debian.org>  Sun, 16 Jan 2005 15:41:53 +0000

base-installer (1.14) experimental; urgency=low

  NOTE: not for sarge, needs rootskel 1.11
  * Frans Pop
    - Add sanity check in postinst for empty COMPONENTS to guard against
      ugly and difficult to trace errors from debootstrap. Closes: #283510.
  * Joey Hess
    - Moved debian-installer/kernel/image, debian-installer/kernel/image-2.6,
      debian-installer/kernel/linux/initrd,
      debian-installer/kernel/linux/initrd-2.6 from rootskel.
  * Colin Watson
    - Merge experimental kernel selection improvements branch:
      + Consolidate all the uname calls to find the kernel version into one
        place.
      + Split per-architecture kernel handling out of the postinst into one
        script per architecture, with an interface to the postinst that
        allows base-installer to pick a usable kernel even if the one it
        actually wants isn't on the CD. See kernel/README.
      + Add a test suite for kernel selection. See kernel/tests/README.
      + Make sure all the kernels displayed in
        base-installer/kernel/which-kernel are usable.